welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: not found: value c
	setPos(0,c)
                 ^